# collection_of_vacancies

./: README.md  main.py  pyproject.toml
data/: vacancies_hh.json
src/: external_api.py  file_worker.py  hh_api.py  utils.py  vacancies.py
tests/: conftest.py  test_hh_api.py  test_utils.py  test_vacancies.py
